<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swerve_drive_controller</name>
  <version>0.0.0</version>
  <description>Converts joy msg to swerve outputs</description>
  <maintainer email="CalvinCRFC@gmail.com">ros</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>drive_controller_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
